lab-guide/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-guide
  annotations:
    # Ensures that this is the first resource applied in a sync
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    # Permit the OpenShift GitOps instance to manage this namespace
    argocd.argoproj.io/managed-by: openshift-gitops
