lab-guide/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-guide
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    matchLabels:
      app: lab-guide
  template:
    metadata:
      labels:
        app: lab-guide
    spec:
      containers:
      - name: lab-guide
        image: quay.io/evanshortiss/summit-2023-lab-guide:1f76383
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
