lab-guide/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-guide
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: lab-guide
  ports:
  - port: 8080
    targetPort: 8080
