lab-guide/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lab-guide
  labels:
    app: lab-guide
  annotations:
      argocd.argoproj.io/sync-wave: "0"
spec:
  to:
    kind: Service
    name: lab-guide
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: 8080
